Conditionally compile the Nokia LCD

--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -7,4 +7,6 @@ USER_LIB_PATH = ${USER_LIB_PATH}
 
 BOARD_TAG = ${BOARD_TAG}
 
+CFLAGS = -DHAVE_CONFIG_H=1
+CXXFLAGS = -DHAVE_CONFIG_H=1
 include ${ARDUINO_DIR}/Arduino.mk
