--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -9,4 +9,4 @@ BOARD_TAG = ${BOARD_TAG}
 
 CFLAGS = -DHAVE_CONFIG_H=1
 CXXFLAGS = -DHAVE_CONFIG_H=1
-include ${ARDUINO_DIR}/Arduino.mk
+include ${ARDMK_DIR}/Arduino.mk
