--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -1,9 +1,11 @@
 ARDUINO_DIR = ${ARDUINO_DIR}
 ARDUINO_PORT = ${ARDUINO_PORT}
 ARDUINO_LIBS = ${ARDUINO_LIBS}
+LIBRARIES = ${ARDUINO_LIBS}
 ARDMK_DIR = ${ARDMK_DIR}
 AVR_TOOLS_DIR = ${AVR_TOOLS_DIR}
 USER_LIB_PATH = ${USER_LIB_PATH}
+LIBRARYPATH = ${USER_LIB_PATH}
 
 BOARD_TAG = ${BOARD_TAG}
 
