Fixed Kalman library issues
Fixed Kalman library issues and made Kalman usage optional

--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -8,6 +8,7 @@ USER_LIB_PATH = ${USER_LIB_PATH}
 LIBRARYPATH = ${USER_LIB_PATH}
 
 BOARD_TAG = ${BOARD_TAG}
+BOARD = ${BOARD_TAG}
 
 CFLAGS = -DHAVE_CONFIG_H=1
 CXXFLAGS = -DHAVE_CONFIG_H=1
