Fix build issues
Do not output Arduino.mk path and always link in crc library.

--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -12,4 +12,4 @@ BOARD = ${BOARD_TAG}
 
 CFLAGS = -DHAVE_CONFIG_H=1
 CXXFLAGS = -DHAVE_CONFIG_H=1
-include ${ARDMK_LOCATION}/Arduino.mk
+include ${ARDMK_LOCATION}
