make: output avrdude.conf path
Also move to Python 3.

--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -4,6 +4,7 @@ ARDUINO_LIBS = ${ARDUINO_LIBS}
 LIBRARIES = ${ARDUINO_LIBS}
 ARDMK_DIR = ${ARDMK_DIR}
 AVR_TOOLS_DIR = ${AVR_TOOLS_DIR}
+AVRDUDE_CONF = ${AVRDUDE_CONF}
 USER_LIB_PATH = ${USER_LIB_PATH}
 LIBRARYPATH = ${USER_LIB_PATH}
 
