--- a/Brewslave/Makefile.in
+++ b/Brewslave/Makefile.in
@@ -10,6 +10,6 @@ LIBRARYPATH = ${USER_LIB_PATH}
 BOARD_TAG = ${BOARD_TAG}
 BOARD = ${BOARD_TAG}
 
-CFLAGS = -DHAVE_CONFIG_H=1
-CXXFLAGS = -DHAVE_CONFIG_H=1
+CFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra
+CXXFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra
 include ${ARDMK_LOCATION}
