--- a/Makefile.in
+++ b/Makefile.in
@@ -1,15 +1,11 @@
+ARDUINO_QUIET = 1
 ARDUINO_DIR = ${ARDUINO_DIR}
 ARDUINO_LIBS = ${ARDUINO_LIBS}
-LIBRARIES = ${ARDUINO_LIBS}
 ARDMK_DIR = ${ARDMK_DIR}
 AVR_TOOLS_DIR = ${AVR_TOOLS_DIR}
 AVRDUDE_CONF = ${AVRDUDE_CONF}
 USER_LIB_PATH = ${USER_LIB_PATH}
-LIBRARYPATH = ${USER_LIB_PATH}
-
 BOARD_TAG = ${BOARD_TAG}
-BOARD = ${BOARD_TAG}
-
 CFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra
-CXXFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra
+CXXFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra -I/usr/lib/avr/include
 include ${ARDMK_LOCATION}
