configure: set BOARD_SUB for nano boards

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,6 +6,7 @@ AVR_TOOLS_DIR = ${AVR_TOOLS_DIR}
 AVRDUDE_CONF = ${AVRDUDE_CONF}
 USER_LIB_PATH = ${USER_LIB_PATH}
 BOARD_TAG = ${BOARD_TAG}
+BOARD_SUB = ${BOARD_SUB}
 CFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra
 CXXFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra -I/usr/lib/avr/include
 include ${ARDMK_LOCATION}
