configure: pull in Arduino.mk as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/OneWire"]
 	path = libs/OneWire
 	url = https://github.com/adafruit/MAX31850_OneWire
+[submodule "libs/Arduino-Makefile"]
+	path = libs/Arduino-Makefile
+	url = https://github.com/sudar/Arduino-Makefile
