configure: use AVR tools from distribution
Also specify AVR tools include directory to avoid annoying LSP warnings
about pgmspace.h.

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,11 +2,10 @@ ARDUINO_QUIET = 1
 ARDUINO_DIR = ${ARDUINO_DIR}
 ARDUINO_LIBS = ${ARDUINO_LIBS}
 ARDMK_DIR = ${ARDMK_DIR}
-AVR_TOOLS_DIR = ${AVR_TOOLS_DIR}
 AVRDUDE_CONF = ${AVRDUDE_CONF}
 USER_LIB_PATH = ${USER_LIB_PATH}
 BOARD_TAG = ${BOARD_TAG}
 BOARD_SUB = ${BOARD_SUB}
 CFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra
-CXXFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra -I/usr/lib/avr/include
+CXXFLAGS = -DHAVE_CONFIG_H=1 -Wall -Wextra -I. -I$(ARDUINO_DIR)/hardware/tools/avr/avr/include
 include ${ARDMK_LOCATION}
