--- a/config.ini.template
+++ b/config.ini.template
@@ -19,12 +19,9 @@ with_mock_controller = false
 # default use this setting.
 # boards_txt =
 
-# [ds18b20]
-# pin = 2
-
 # [sh1106]
-# rst = 9
-# dc = 8
+# rst = 12
+# dc = 10
 # din = 11
 # clk = 13
 
@@ -40,14 +37,37 @@ with_mock_controller = false
 # din = 11
 # clk = 13
 
+# [starging-sensor]
+# pin = 7
+
+# Either use pin 9 as pullup XOR as ambient sensor.
+# [brew-sensor]
+# pin = 8
+# pin_pullup = 9
+
+# Either use pin 9 as brew pullup XOR as ambient sensor.
+# [ambient-sensor]
+# pin = 9
+
+# The following two buttons are not yet implemented.
+# [brew-button]
+# pin = 2
+
+# [starging-button]
+# pin = 3
+
 # [ky040]
 # sw = A0
 # dt = A1
 # clk = A2
 
 # [gbc]
-# power = 6
-# dejam = 7
-# jammed = 8
-# valve = 9
-# ignition = 10
+# power = 4
+# dejam = 5
+# jammed = A3
+# valve = A4
+# ignition = A5
+
+# The starging controller is not yet implement.
+# [starging-controller]
+# pin = 6
