--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: jidicula/clang-format-action@v4.5.0
+        with:
+          clang-format-version: '10'
+          check-path: '.'
 
       - name: Checkout submodules
         run: git submodule update --init --recursive
