--- a/config.ini.template
+++ b/config.ini.template
@@ -56,12 +56,12 @@ with_mock_controller = false
 # clk = A2
 
 # [gbc]
-# power = 4
-# dejam = 5
+# power = 6
+# dejam = 4
 # jammed = A3
 # valve = A4
 # ignition = A5
 
-# The starging controller is not yet implement.
-# [starging-controller]
-# pin = 6
+# The sparging controller is not yet implement.
+# [sparging-controller]
+# pin = 5
